--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+  .p1{
+    background-color: brown;
+    color: aquamarine;
+  }  
+</style>
 <body>
     <h1 style="color: black;">this is heading</h1>
+    <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ducimus voluptates adipisci velit ab in, accusantium
+        veritatis, dignissimos dicta sint architecto unde mollitia reprehenderit natus vel porro. Numquam, aspernatur
+        quos!</p>
 
 </body>
+
 </html>
