--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <style>
@@ -13,7 +14,7 @@
   }  
 </style>
 <body>
-    <h1 style="color: black;">this is heading</h1>
+    <h1 style="color: black;">This is heading</h1>
     <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ducimus voluptates adipisci velit ab in, accusantium
         veritatis, dignissimos dicta sint architecto unde mollitia reprehenderit natus vel porro. Numquam, aspernatur
         quos!</p>
